tests/ui/regions/regions-infer-call-3.stderr
error: lifetime may not live long enough
  --> $DIR/regions-infer-call-3.rs:8:24
   |
LL |     let z = with(|y| { select(x, y) });
   |                   --   ^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
   |                   ||
   |                   |return type of closure is &'2 isize
   |                   has type `&'1 isize`

error: aborting due to previous error

